--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 # db connect setting
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://
+datasource.url=jdbc:mysql://localhost:3306/takoyaki/useSSL=false
 datasource.username=
 datasource.password=
 
