JPA를 사용하기 위한 프로젝트 환경 설정 변경
Spring version 4.xx -> 5.xx
HibernateConfig 클래스 추가
pom.xml에 dependency 추가
  - jpa & hibernate
  - logback & slf4j
  - lombok
  - json data binding을 위한 jackson 추가

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,8 @@
 # db connect setting
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://
-datasource.username=
-datasource.password=
+datasource.url=jdbc:mysql://localhost:3306/takoyaki?useSSL=false
+datasource.username=root
+datasource.password=1234
 
 # db connection pool setting
 datasource.dbcp2.initial-size=10
