--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # db connect setting
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/takoyaki?useSSL=false
+datasource.url=jdbc:mysql://localhost:3306/takoyaki?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 datasource.username=root
 datasource.password=1234
 
