--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,26 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- multipart -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <!-- aws s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.383</version>
+        </dependency>
+
     </dependencies>
 
     <build>
