--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 # db connect setting
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/takoyaki?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+datasource.url=jdbc:mysql://106.10.41.222:3306/takoyaki?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 datasource.username=root
-datasource.password=1234
+datasource.password=mashup12!@
 
 # db connection pool setting
 datasource.dbcp2.initial-size=5
