--- a/src/main/resources/local/db.properties
+++ b/src/main/resources/local/db.properties
@@ -1,6 +1,6 @@
 # db connect setting
 datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://106.10.41.222:3306/takoyaki?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+datasource.url=jdbc:mysql://localhost:3306/takoyaki?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 datasource.username=root
 datasource.password=mashup12!@
 
